Skin: Fix scrollbar -moz-appearance sometimes getting overwritten (eg. horizontal editor scrollbar)
(integrated from komodo (trunk) change 80639 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13138 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/scrollbars.less
+++ b/src/chrome/komodo/skin/plat/shared/scrollbars.less
@@ -5,7 +5,7 @@
 {
     .appearance(@id, @elem, @state)
     {
-        -moz-appearance: ~"@{scrollbar-@{id}-@{elem}-appearance}";
+        -moz-appearance: ~"@{scrollbar-@{id}-@{elem}-appearance}" !important;
         background: ~"@{scrollbar-@{id}-@{elem}-background@{state}}";
         transition: ~"@{scrollbar-@{id}-@{elem}-transition}";
         visibility: ~"@{scrollbar-@{id}-@{elem}-visibility}";
